<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity"
    android:layout_width="match_parent"
    android:background="@color/colorPrimary"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:background="@color/colorPrimary"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:id="@+id/extention_settings"
            >
            <com.rey.material.widget.TextView
                android:layout_width="wrap_content"
                android:text="@string/video_library"
                android:paddingLeft="10dp"
                android:layout_marginTop="5dp"
                android:textColor="@color/gray_text"
                android:textSize="16.2pt"
                android:id="@+id/title_video_setting"
                android:layout_height="wrap_content"/>

            <com.rey.material.widget.TextView
                android:layout_width="wrap_content"
                android:text="@string/settings"
                android:paddingLeft="10dp"
                android:layout_below="@+id/title_video_setting"
                android:textColor="@android:color/black"
                android:textSize="16.2pt"
                android:layout_marginBottom="5dp"
                android:id="@+id/title_setting"
                android:layout_height="wrap_content"/>

        </RelativeLayout>
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_below="@+id/extention_settings"
            android:background="@color/colorPrimary"
            android:layout_marginTop="50dp"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="15dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <Button
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:text="@string/language"
                android:id="@+id/setting_language"
                android:textColor="@color/white"
                android:background="@color/green"
            />
            <Button
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:text="@string/gps"
                android:id="@+id/setting_gps"
                android:layout_marginTop="4dp"
                android:textColor="@color/white"
                android:background="@color/green_dark"
            />

            <Button
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:text="@string/data"
                android:id="@+id/setting_data"
                android:layout_marginTop="4dp"
                android:textColor="@color/white"
                android:background="@color/green_light"
                />

        </LinearLayout>

    </RelativeLayout>
</FrameLayout>