<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:background="@color/colorPrimary"
    android:visibility="gone"
    >
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_marginTop="5dp"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/btn_connect"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/connect_peer_button" />
            <Button
                android:id="@+id/btn_disconnect"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/disconnect_peer_button"
                android:layout_weight="1"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/btn_start_client"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:visibility="gone"
                android:text="@string/get_file_button"
                />
        </LinearLayout>
        <TextView
            android:id="@+id/device_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/device_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/group_owner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/group_ip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:id="@+id/status_bar"
        android:orientation="vertical"
        android:layout_gravity="bottom"
        android:layout_height="wrap_content"
        android:layout_marginBottom="3dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:textColor="@android:color/black"
            android:id="@+id/status_text">
        </TextView>
    </LinearLayout>
</FrameLayout>
